--- a/src/components/styles/Videos.scss
+++ b/src/components/styles/Videos.scss
@@ -1,6 +1,7 @@
 @use 'globals';
 
 .videosSection {
+  height: 50rem;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -15,13 +16,15 @@
 }
 
 .videos-box {
+  width: 100%;
   display: flex;
 }
 
 .text-box {
+  padding: 3rem 8rem;
   display: flex;
   flex-direction: column;
-  width: 20rem;
+  width: 100%;
   font-family: globals.$font-text;
 }
 
@@ -34,9 +37,12 @@ p {
 }
 
 .secondTitle {
+  font-size: 2.4rem;
   margin-top: 0;
 }
 
 .message {
+  font-weight: 500;
+  font-size: 1.4rem;
   margin-top: 0;
 }
